--- a/book1.html
+++ b/book1.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
-<title>FastScroll demo: simple</title>
+<title>FastScroll demo: book1</title>
 
 <script type="text/javascript" src="./src/fastscroll.js"></script>
 
@@ -130,8 +130,8 @@ body {
 
 #scroller li {
 	padding:0 10px;
-	height:40px;
-	line-height:40px;
+	height:266px;
+	line-height:266px;
 	border-bottom:1px solid #ccc;
 	border-top:1px solid #fff;
 	background-color:#fafafa;
@@ -142,55 +142,71 @@ body {
 	position:absolute;
 	top:0; left:0;
 }
+.image_wrap{
+
+	width: 100%;
+	height: 100%;
+
+}
+.bk_full {
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+.img1{
+	background-image: url(http://qn.media.epub360.com/materials/origin/6e3192403aef99dc70ef2173abe92443_origin.gif);
+}
+.img2{
+	background-image: url(http://qn.media.epub360.com/materials/origin/d1d5343019f454ce5bf72a174e803c0e_origin.gif);
+}
+.img3{
+	background-image: url(http://qn.media.epub360.com/materials/origin/dba37ada92be2e2b416961a2c20bd1c3_origin.gif);
+}
+.img4{
+	background-image: url(http://qn.media.epub360.com/materials/origin/97b806fa406e87c851adac3c983bc405_origin.gif);
+}
+
 
 </style>
 </head>
 <body>
 
-<div id="header">simple</div>
+<div id="header">book1</div>
 <div id="wrapper">
 	<div id="scroller">
 		<ul id="thelist">
-			<li>Pretty row 1</li>
-			<li>Pretty row 2</li>
-			<li>Pretty row 3</li>
-			<li>Pretty row 4</li>
-			<li>Pretty row 5</li>
-			<li>Pretty row 6</li>
-			<li>Pretty row 7</li>
-			<li>Pretty row 8</li>
-			<li>Pretty row 9</li>
-			<li>Pretty row 10</li>
-			<li>Pretty row 11</li>
-			<li>Pretty row 12</li>
-			<li>Pretty row 13</li>
-			<li>Pretty row 14</li>
-			<li>Pretty row 15</li>
-			<li>Pretty row 16</li>
-			<li>Pretty row 17</li>
-			<li>Pretty row 18</li>
-			<li>Pretty row 19</li>
-			<li>Pretty row 20</li>
-			<li>Pretty row 21</li>
-			<li>Pretty row 22</li>
-			<li>Pretty row 23</li>
-			<li>Pretty row 24</li>
-			<li>Pretty row 25</li>
-			<li>Pretty row 26</li>
-			<li>Pretty row 27</li>
-			<li>Pretty row 28</li>
-			<li>Pretty row 29</li>
-			<li>Pretty row 30</li>
-			<li>Pretty row 31</li>
-			<li>Pretty row 32</li>
-			<li>Pretty row 33</li>
-			<li>Pretty row 34</li>
-			<li>Pretty row 35</li>
-			<li>Pretty row 36</li>
-			<li>Pretty row 37</li>
-			<li>Pretty row 38</li>
-			<li>Pretty row 39</li>
-			<li>Pretty row 40</li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+
 		</ul>
 	</div>
 </div>
