--- a/book1.html
+++ b/book1.html
@@ -131,7 +131,7 @@ body {
 #scroller li {
 	padding:0 10px;
 	height:266px;
-	line-height:266px;
+	/*line-height:266px;*/
 	border-bottom:1px solid #ccc;
 	border-top:1px solid #fff;
 	background-color:#fafafa;
@@ -153,16 +153,16 @@ body {
     background-repeat: no-repeat;
 }
 .img1{
-	background-image: url(http://qn.media.epub360.com/materials/origin/6e3192403aef99dc70ef2173abe92443_origin.gif);
+	background-image: url(./imgs/6e3192403aef99dc70ef2173abe92443_origin.gif);
 }
 .img2{
-	background-image: url(http://qn.media.epub360.com/materials/origin/d1d5343019f454ce5bf72a174e803c0e_origin.gif);
+	background-image: url(./imgs/d1d5343019f454ce5bf72a174e803c0e_origin.gif);
 }
 .img3{
-	background-image: url(http://qn.media.epub360.com/materials/origin/dba37ada92be2e2b416961a2c20bd1c3_origin.gif);
+	background-image: url(./imgs/dba37ada92be2e2b416961a2c20bd1c3_origin.gif);
 }
 .img4{
-	background-image: url(http://qn.media.epub360.com/materials/origin/97b806fa406e87c851adac3c983bc405_origin.gif);
+	background-image: url(./imgs/97b806fa406e87c851adac3c983bc405_origin.gif);
 }
 
 
@@ -174,38 +174,402 @@ body {
 <div id="wrapper">
 	<div id="scroller">
 		<ul id="thelist">
-			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<div class="image_wrap bk_full img1"> </div>
+			</li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
 			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
 			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img1"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img2"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+
+			<li><div class="image_wrap bk_full img3"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			<li><div class="image_wrap bk_full img4"> </div></li>
+			<li>
+				<span>经成都高新区管委会引荐，6月15日和7月1日，
+						威特龙集团分别与中机西南能源科技有限公司和四川中光防雷科技股份有限公司达成战略合作共识，
+						并举行了签约仪式，威特龙集团战略伙伴朋友圈再次扩容升级。
+					</span>
+			</li>
+			
 
 		</ul>
 	</div>
